--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="player/lib.css">
     <title>insta-stories</title>
-    <script src="index.js"></script>
+    <script src="player/lib.js" defer></script>
+    <script src="index.js" defer></script>
 </head>
 
 <body>
     <div class="my-player">
 
     </div>
-
-    <script>
-        initPlayer({
-            target: '.my-player',
-            slides: [
-                {url: 'images/chunk1.jpg', alt: 'slide1'},
-                {url: 'images/chunk2.jpg', alt: 'slide2'},
-                {url: 'images/chunk1.jpg', alt: 'slide3'}
-            ],
-            delayPerSlide: 5
-        });
-    </script>
 </body>
 </html>
