--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="player/lib.css">
     <title>insta-stories</title>
-    <script src="player/lib.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="player/lib.js" type="module" defer></script>
+    <script src="lib.js" type="module" defer></script>
 </head>
 
 <body>
