--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="player/lib.css">
     <title>insta-stories</title>
     <script src="player/lib.js" type="module" defer></script>
-    <script src="lib.js" type="module" defer></script>
+    <script src="index.js" type="module" defer></script>
 </head>
 
 <body>
-    <div class="my-player">
-
-    </div>
+<div class="my-player">
+</div>
 </body>
 </html>
